--- a/mainmenu.htm
+++ b/mainmenu.htm
@@ -19,7 +19,7 @@
                 <li><a href="./insegnante.php">insegnante</a></li>
                 <li><a href="./orario.php">orario</a></li>
                 <li><a href="./dojo.php">dojo</a></li>
-                <li><a href="./seminari.php#<?php echo $s->sid;?>">attivit&agrave;</a></li>
+                <li><a href="./seminari.htm">attivit&agrave;</a></li>
                 <li><a href="./gallery.php">foto</a></li>
                 <li><a href="./news.php">news</a></li>
                 <li><a href="./links.php">links</a></li>
