--- a/mainmenu.htm
+++ b/mainmenu.htm
@@ -7,19 +7,19 @@
               <span class="icon-bar bgcolrenbukai"></span>
               <span class="icon-bar bgcolrenbukai"></span>
             </button>
-            <a class="navbar-brand mobile" href="">&nbsp;<img class='navheader' src='./assets/logoblue.png' width='20px' /><br/>home</a>
+            <a class="navbar-brand mobile" href="./index.htm">&nbsp;<img class='navheader' src='./assets/logoblue.png' width='20px' /><br/>home</a>
             <a class="navbar-brand mobile" href="./orario.php">&nbsp;<span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span><br/>orario</a>
-            <a class="navbar-brand mobile" href="./seminari.php#<?php echo $s->sid;?>">&nbsp;<span class="glyphicon glyphicon-copy" aria-hidden="true"></span><br/>stage</a>
+            <a class="navbar-brand mobile" href="./seminari.htm">&nbsp;<span class="glyphicon glyphicon-copy" aria-hidden="true"></span><br/>stage</a>
           </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="./index.php">home</a></li>
+                <li><a href="./index.htm">home</a></li>
                 <li><a href="./aikido.php">aikido</a></li>
-                <li><a href="./onohaittoryu.php">onoha itto ryu</a></li>
+                <li><a href="./onohaittoryu.htm">onoha itto ryu</a></li>
                 <li><a href="./insegnante.php">insegnante</a></li>
                 <li><a href="./orario.php">orario</a></li>
                 <li><a href="./dojo.php">dojo</a></li>
-                <li><a href="./seminari.htm">attivit&agrave;</a></li>
+                <li><a id="seminarlink" href="./seminari.htm">attivit&agrave;</a></li>
                 <li><a href="./gallery.php">foto</a></li>
                 <li><a href="./news.php">news</a></li>
                 <li><a href="./links.php">links</a></li>
