--- a/mainmenu.htm
+++ b/mainmenu.htm
@@ -16,13 +16,13 @@
                 <li><a href="./index.htm">home</a></li>
                 <li><a href="./aikido.php">aikido</a></li>
                 <li><a href="./onohaittoryu.htm">onoha itto ryu</a></li>
-                <li><a href="./insegnante.php">insegnante</a></li>
-                <li><a href="./orario.php">orario</a></li>
+                <li><a href="./insegnante.htm">insegnante</a></li>
+                <li><a href="./orario.htm">orario</a></li>
                 <li><a href="./dojo.php">dojo</a></li>
                 <li><a id="seminarlink" href="./seminari.htm">attivit&agrave;</a></li>
                 <li><a href="./gallery.php">foto</a></li>
-                <li><a href="./news.php">news</a></li>
-                <li><a href="./links.php">links</a></li>
+                <li><a href="./news.htm">news</a></li>
+                <li><a href="./links.htm">links</a></li>
             </ul>
         </div>
     </div>
