--- a/orario.htm
+++ b/orario.htm
@@ -1,34 +1,41 @@
-<?php
-    setlocale(LC_TIME, 'ita');
-    date_default_timezone_set('Europe/Rome');
-	include("./utils/class.utils.php");
-    include("./utils/class.seminar.php");
-    $s = new seminar();
-    $s->setSource("./seminari.json");
-?>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>associazione renbukai - insegnante</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>associazione renbukai - orario</title>
     <link rel="apple-touch-icon-precomposed" href="assets/favicon_t.png" />
-    <link rel="shortcut icon" href="assets/favicon.png">
+    <link rel="shortcut icon" href="assets/favicon.png" />
     <!-- bootstrap -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	<link rel="stylesheet" media="screen" href="css/main.css" /> <!--Load CSS-->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css" />
+    <link rel="stylesheet" href="./css/bootstrap-image-gallery.css" />
+
+    <link rel="stylesheet" media="screen" href="css/main.css" /> <!--Load CSS-->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="./js/moment-with-locales.js"></script>  
+
+    <script src="./js/misc.js" type="text/javascript"></script>  
+
+<script>
+$.get("head_banner.htm", function(data){
+    $("#headernomobile").html(data);
+    $("#headermobile").html(data);
+});
+$.get("mainmenu.htm", function(data){
+    $("#mmenu").html(data);
+});
+</script>
 
 </head>
-<body id="orario">
-	<div class="container">
-        <div class="nomobile">
-            <?php include('./utils/head_banner.php'); ?>
+<body>
+    <div class="container">
+        <div id="headernomobile" class="nomobile col-lg-12">
         </div>
         <div class="header clearfix">
-            <?php include('./utils/menumobile.php'); ?>
+            <div id="mmenu"></div>
+            <div id="smenu"></div>          
         </div>
-        <div class="mobile">
-            <?php include('./utils/head_banner.php'); ?>
+        <div id="headermobile" class="mobile">
         </div>
         <div class="row">
         	<div class="col-xs-12">
@@ -37,8 +44,8 @@
         </div>
         <div class="row">               
         	<div class="col-xs-12">
-            <center>
-                <table>
+             <center>
+                <table class="orario">
                     <thead>
                     <tr><th class="dayh">Ora</th>
                         <th class="dayh w100p"><span class="nomobile">Luned&igrave;</span><span class="mobile">Lu</span></th>
@@ -120,16 +127,18 @@
         </div>
         <div class="row">               
         	<div class="col-xs-12">
-                <table>
+             <center>
+                <table class="orario">
                     <thead>
-                    <tr><th>Ora</th>
+                    <tr><th class="dayh">Ora</th>
                         <th class="dayh w100p"><span class="nomobile">Luned&igrave;</span><span class="mobile">Lu</span></th>
                         <th class="dayh w100p"><span class="nomobile">Marted&igrave;</span><span class="mobile">Ma</span><br/><a href="./aikidopesaro.php">Pesaro</a></th>
                         <th class="dayh w100p"><span class="nomobile">Mercoled&igrave;</span><span class="mobile">Me</span><br/><a href="./aikidorimini.php">Rimini</a></th>
                         <th class="dayh w100p"><span class="nomobile">Gioved&igrave;</span><span class="mobile">Gi</span><br/><a href="./aikidopesaro.php">Pesaro</a></th>
                         <th class="dayh w100p"><span class="nomobile">Venerd&igrave;</span><span class="mobile">Ve</span><br/><a href="./aikidorimini.php">Rimini</a></th>
                         <th class="dayh w100p"><span class="nomobile">Sabato</span><span class="mobile">Sa</span><br/><a href="./aikidopesaro.php">Pesaro</a></th>
-                        <th>Ora</th>
+                        <th class="dayh">Ora</th>
+                        </tr>
                     </thead>
                     <tbody>
                        <tr>
@@ -162,39 +171,38 @@
                             <td rowspan="2" class="hour empty">&nbsp;</td>
                             <td rowspan="3" class="hour empty">&nbsp;<br/>&nbsp;<br/>&nbsp;</td>
                             <td rowspan="3" class="hour adulti">Adulti</td>
-                            <td class="time">18:30&nbsp;-&nbsp;19:00</td>
+                            <td class="time" rowspan="3">18:30&nbsp;-&nbsp;20:00</td>
                         </tr>
                         <tr>
                             <td class="time">19:00&nbsp;-&nbsp;19:30</td>
-                            <td class="time">19:00&nbsp;-&nbsp;19:30</td>
+                            <!--td class="time">19:00&nbsp;-&nbsp;19:30</td-->
                         </tr>
                         <tr>
                             <td class="time">19:30 - 20:00</td>
                             <td rowspan="3" class="hour adulti">Adulti</td>
                             <td rowspan="3" class="hour adulti">Adulti</td>
-                            <td class="time">19:30 - 20:00</td>
+                            <!--td class="time">19:30 - 20:00</td-->
                         </tr>
                         <tr>
                             <td class="time">20:00 - 20:30</td>
                             <td rowspan="3" class="hour adulti">Adulti</td>
                             <td rowspan="3" class="hour adulti">Adulti</td>
                             <td rowspan="3" class="hour empty">&nbsp;</td>
-                            <td class="time">20:00 - 20:30</td>
+                            <td class="time" rowspan="3">20:00 - 21:30</td>
                         </tr>
                         <tr>
                             <td class="time">20:30 - 21:00</td>
-                            <td class="time">20:30 - 21:00</td>
+                            <!--td class="time">20:30 - 21:00</td-->
                         </tr>
                         <tr>
                             <td class="time">21:00 - 21:30</td>
                             <td class="hour empty">&nbsp;</td>
                             <td class="hour empty">&nbsp;</td>
-                            <td class="time">21:00 - 21:30</td>
-                        </tr>
-                        <tr>
+                            <!--td class="time">21:00 - 21:30</td-->
                         </tr>
                     </tbody>
                 </table>
+             </center>
             </div>
         </div>
         <div class="row">
@@ -202,17 +210,19 @@
         		<h3>agosto</h3>
         	</div>
         </div>
-        <div class="row">               
-                <table>
+        <div class="row"> 
+            <center>             
+                <table class="orario">
                     <thead>
-                    <tr><th>Ora</th>
+                    <tr><th class="dayh">Ora</th>
                         <th class="dayh w100p"><span class="nomobile">Luned&igrave;</span><span class="mobile">Lu</span></th>
                         <th class="dayh w100p"><span class="nomobile">Marted&igrave;</span><span class="mobile">Ma</span><br/><a href="./aikidopesaro.php">Pesaro</a></th>
                         <th class="dayh w100p"><span class="nomobile">Mercoled&igrave;</span><span class="mobile">Me</span><br/><a href="./aikidorimini.php">Rimini</a></th>
                         <th class="dayh w100p"><span class="nomobile">Gioved&igrave;</span><span class="mobile">Gi</span><br/><a href="./aikidopesaro.php">Pesaro</a></th>
                         <th class="dayh w100p"><span class="nomobile">Venerd&igrave;</span><span class="mobile">Ve</span><br/><a href="./aikidorimini.php">Rimini</a></th>
                         <th class="dayh w100p"><span class="nomobile">Sabato</span><span class="mobile">Sa</span><br/><a href="./aikidopesaro.php">Pesaro</a></th>
-                        <th>Ora</th>
+                        <th class="dayh">Ora</th>
+                        </tr>
                     </thead>
                     <tbody>
                        <tr>
@@ -241,13 +251,22 @@
                         </tr>
                     </tbody>
                 </table>
+            </center>
         </div>
-        <div class="row">               
-                <div class="notice"><a name="note"><i class="fa fa-bookmark-o"></i></a> per motivi organizzativi, le persone interessate e gli ospiti di altri Gruppi di Pratica interessati a partecipare
+        <div class="clearfix">&nbsp;</div>
+        <div class="col-xs-12">               
+                <div class="warn"><a name="note"><i class="fa fa-bookmark-o"></i></a> per motivi organizzativi, le persone interessate e gli ospiti di altri Gruppi di Pratica interessati a partecipare
                 sono cortesemente invitate ad annunciare la propria presenza tramite e-mail (info@onohaittoryuitalia.org) o telefono (3405996157).</div>
         </div>
-	</div><!-- container -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/bootstrap.js"></script>    
+    </div><!-- container -->
+    <div class="container marketing">
+        <div class="clearfix mobile">&nbsp;</div>
+        <footer class="footer mobile">
+            <div class="container acenter">
+            <p class="text-muted"><img src="./assets/footer.png" alt=""></p>
+            </div>
+             </footer>
+    </div><!-- container -->
+    <script src="./js/bootstrap.js"></script>      
 </body>
 </html>
