sanitised header & row usage

--- a/head_banner.htm
+++ b/head_banner.htm
@@ -1,7 +1,7 @@
 <div class="topheader">
-    <div class="topheader__left"><a class="noborder" href="/index.php"><img src="./assets/logoblue.png" alt="renbukai" height="80px">&nbsp;&nbsp;&nbsp;&nbsp;<img class="mobile" src='./assets/scrittav.png' height="80px" /></a></div>
+    <div class="topheader__left"><a class="noborder" href="/index.htm"><img src="./assets/logoblue.png" alt="renbukai" height="80px">&nbsp;&nbsp;&nbsp;&nbsp;<img class="mobile" src='./assets/scrittav.png' height="80px" /></a></div>
     <div class="topheader__center">
-        <div class="title"><a class="noborder" href="/index.php">Associazione Renbukai</a> </div>
+        <div class="title"><a class="noborder" href="/index.htm">Associazione Renbukai</a> </div>
         <div class="subtitle">Scuola di Aikido e Gruppo di pratica Onoha Itto Ryu</div>
     </div>
     <div class="topheader__center nomobile">&nbsp;&nbsp;</div>
