--- a/onohaittoryu.htm
+++ b/onohaittoryu.htm
@@ -35,8 +35,9 @@ $.get("mainmenu.htm", function(data){
         <div id="headermobile" class="mobile">
         </div>
         <div class="row">
-              <h3>Onoha Itto Ryu</h3>
-            <div class="col-lg-12">
+            <h3>Onoha Itto Ryu</h3>
+        </div>
+        <div class="col-lg-12">
                 <h4>Cenni storici</h4>
                 <p>L'origine dell'Ittō Ryū risale alla seconda metà del ‘500, un'epoca di forti tensioni, caratterizzata da continue lotte di potere tra i signori della guerra, tra i quali spiccano i nomi di Oda Nobunaga, Toyotomi Hideyoshi e Tokugawa Ieyasu, nella loro ambizione di unificare il Giappone sotto un'unico dominio.</p>
                 
@@ -66,22 +67,16 @@ $.get("mainmenu.htm", function(data){
                 <h4>Il nome</h4>
                 <p>Fu Ono Jirōemon Tadaaki, designato da Itō Ittōsai Kagehisa come suo diretto successore, che, oltre a sistemarne le tecniche, chiamò lo stile “Onoha Ittō Ryū Kenjutsu” riconoscendo in Itō Ittōsai Kagehisa il suo ideatore.
 
+                <p>Negli oltre quattrocento anni di storia della scuola, alcuni maestri di Onoha Ittō Ryū Kenjutsu hanno fondato altre scuole pur rimanendo nel solco della tradizione Ittō Ryū ed è per questo che queste scuole hanno mantenuto nella loro denominazione il termine Ittō Ryū.</p>
 
-Negli oltre quattrocento anni di storia della scuola, alcuni maestri di Onoha Ittō Ryū Kenjutsu hanno fondato altre scuole pur rimanendo nel solco della tradizione Ittō Ryū ed è per questo che queste scuole hanno mantenuto nella loro denominazione il termine Ittō Ryū.
+                <p>Con il termine Ittō Ryū, ovvero lo "stile di una spada", nel suo significato letterale, si intende non "una spada" in senso oggettivo e quantitativo, bensì il diventare Uno con la Spada per raggiungere, attraverso la pratica, un orizzonte in cui non vi è più distinzione tra la spada e colui che la brandisce, ma solo l'imperturbabile armonia nell'incessante ciclo dell'Uno/Molteplice.</p>
 
+                <p>L'Uno parte del Molteplice, ma che allo stesso tempo lo genera nell'armonia circolare dell'Universo che il vero significato del nome e il simbolo della scuola rappresenta.</p>
 
-Con il termine Ittō Ryū, ovvero lo "stile di una spada", nel suo significato letterale, si intende non "una spada" in senso oggettivo e quantitativo, bensì il diventare Uno con la Spada per raggiungere, attraverso la pratica, un orizzonte in cui non vi è più distinzione tra la spada e colui che la brandisce, ma solo l'imperturbabile armonia nell'incessante ciclo dell'Uno/Molteplice.
-
-L'Uno parte del Molteplice, ma che allo stesso tempo lo genera nell'armonia circolare dell'Universo che il vero significato del nome e il simbolo della scuola rappresenta.
-
-
-Solo così il "Setsunin tō" (Spada che dona la Morte) diviene "Katsujin ken" (Spada che dona la Vita), conducendo il praticante al senso ultimo, apparentemente paradossale, del cammino dell'uomo di spada:
-
-
-"Il vero Maestro di spada è colui che, superati i confini della vittoria e della sconfitta, posa la spada e diviene uomo di pace".</p>
+                <p>Solo così il "Setsunin tō" (Spada che dona la Morte) diviene "Katsujin ken" (Spada che dona la Vita), conducendo il praticante al senso ultimo, apparentemente paradossale, del cammino dell'uomo di spada:<br/>
+                "Il vero Maestro di spada è colui che, superati i confini della vittoria e della sconfitta, posa la spada e diviene uomo di pace".</p>
                 <p>Per maggiori informazioni: <a href="http://www.onohaittoryuitalia.org" target=_blank>sito</a>.</p>
-            </div>
-        </div><!-- row -->
+        </div>
     </div><!-- container -->
 
     <script src="./js/bootstrap.js"></script>    
