--- a/index.htm
+++ b/index.htm
@@ -88,10 +88,10 @@ $.ajax({
            <h4 class='acenter'><span class="glyphicon glyphicon-copy" aria-hidden="true"></span> Prossimi appuntamenti</h4>
            <div id='sempreview'></div>
         </div>
-        <div class="col-xs-12 col-sm-4 col-lg-4">
+        <!--div class="col-xs-12 col-sm-4 col-lg-4">
            <h4 class='acenter'><span class="glyphicon glyphicon-picture" aria-hidden="true"></span> Gallerie foto</h4>
            <div id='photopreview'></div>
-        </div>
+        </div-->
     </div>
     <div class="container marketing">
         <div class="clearfix mobile">&nbsp;</div>
