--- a/seminari.htm
+++ b/seminari.htm
@@ -39,10 +39,10 @@ $.get("mainmenu.htm", function(data){
         </div>
         <div id="headermobile" class="mobile">
         </div>
-		<div class="row">
+  		<div class="row">
 			  <h3>Seminari</h3><!--?php echo $today; ?-->
-			<div class="col-lg-12" id="seminarlist">
-             </div>
+			<div class="col-lg-12  col-xm-12" id="seminarlist">
+      </div>
 		</div><!-- row -->
 	</div><!-- container -->
     <div class="container marketing">
