--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>associazione renbukai</title>
+    <link rel="apple-touch-icon" href="assets/favicon_t.png" />
     <link rel="apple-touch-icon-precomposed" href="assets/favicon_t.png" />
     <link rel="shortcut icon" href="assets/favicon.png" />
     <!-- bootstrap -->
