--- a/insegnante.htm
+++ b/insegnante.htm
@@ -38,12 +38,15 @@ $.get("mainmenu.htm", function(data){
         <div id="headermobile" class="mobile">
         </div>
         <div class="row">
-              <h3>M&deg; Roberto Foglietta</h3><!--?php echo $today; ?-->
-            <div class="col-xs-12 col-sm-4 col-lg-4 ">
-                <div class="acenter pad"><img src="./images/rf01.jpg"/></div>
+            <h3>Roberto Foglietta</h3>
+        </div>            
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-lg-6 ">
+                <div class="acenter pad"><img src="./images/rf03.jpg"/></div>
             </div>
-            <div class="col-xs-12 col-sm-8 col-lg-8">
-                <p>Il M&deg; Roberto Foglietta (6&deg; dan Aikikai Italia/Aikikai Tokyo) &egrave; nato ad Urbino il 12 aprile 1954, 
+            <div class="col-xs-12 col-sm-6 col-lg-6">
+                <p></p>
+                <p>Roberto Foglietta (6&deg; dan Aikikai Italia/Aikikai Tokyo) &egrave; nato ad Urbino il 12 aprile 1954, 
                 e nel 1976 inizia la pratica di Aikido con il M&deg; Marcolini Romeo (3&deg; dan) e poi con il M&deg; Romagnoli 
                 Ezechiele (3&deg; dan), dopo aver iniziato a praticare Judo con il M&deg; Romagnoli Ezechiele (5&deg; dan Judo) e 
                 Tae Kwon Do con il M&deg; Chung Kwang Soo (9&deg; dan).</p>
@@ -51,20 +54,17 @@ $.get("mainmenu.htm", function(data){
                 il M&deg; Fujimoto Yogi (8&deg; Aikikai, Shihan), il M&deg; Hosokawa Hideki (7&deg; Aikikai, Shihan) e il M&deg; Nomoto Jun (7&deg; Aikikai, Shihan).
                 Durante il seminario consegue il grado di 5&deg; kyu, sostenendo il suo primo esame con il M&deg; Fujimoto.</p>
                 <p>Da quel momento, sempre con maggior intensit&agrave;, inizia a frequentare i seminari tenuti dai vari maestri, ed in particolare 
-                quelli del M&deg; Fujimoto, di cui &egrave; stato uke dal 1979 fino all'et&agrave; di 50 anni.</p>
+                quelli del M&deg; Fujimoto, di cui &egrave; stato uke dal 1979 fino all'et&agrave; di 50 anni.<br/></p>
                 <p>Nel 1982 soggiorna per la prima volta in Giappone per due mesi, e ripete l'esperienza anche in seguito fermandosi per periodi dai due ai quattro mesi
-                per poter praticare presso l'Honbu Dojo, il Gessoju Dojo del M&deg; Tada, e il Satomi Hakken Kai del M&deg; Nomoto.<br/></p>
+                per poter praticare presso l'Honbu Dojo, il Gessoju Dojo del M&deg; Tada, e il Satomi Hakken Kai del M&deg; Nomoto.</p>
             </div>
-        </div><!-- row -->
+        </div>
         <div class="row">
-            <div class="col-xs-12">
-            <p>Ha tenuto e tiene lezioni e seminari in Italia e all'estero (la lista aggiornata dei seminari di quest'anno &egrave; disponibile
-                a questa <a href="./seminari.php#<?php echo $s->sid;?>">pagina</a>).</p>
+            <div class="col-xs-12">    
+                <p>Ha tenuto e tiene lezioni e seminari in Italia e all'estero (la lista aggiornata dei seminari di quest'anno &egrave; disponibile a questa <a href="./seminari.php#<?php echo $s->sid;?>">pagina</a>).</p>
             </div>
-            <div class="col-xs-12 col-sm-6 col-lg-6">
-                <div class="acenter pad"><img src="./images/rf03.jpg"/></div>
-            </div>
-
+        </div>
+        <div class="row">        
             <div class="col-xs-12 col-sm-6 col-lg-6">
                     <div class="rank"><span class="piece">&nbsp;</span> <span class="piece">&nbsp;</span> <span class="piece">&nbsp;</span> <span class="piece">&nbsp;</span></div>
                     <div class="rank"><span class="piece">&nbsp;</span> <span class="piece">&nbsp;</span> <span class="piece">&nbsp;</span> <span class="piece">&nbsp;</span></div>
@@ -80,22 +80,16 @@ $.get("mainmenu.htm", function(data){
                     <div class="rank"><span class="piece">29.07.2000</span> <span class="piece">La Spezia</span> <span class="piece">5&deg; dan</span> <span class="piece">M&deg; Tada</span></div>
                     <div class="rank"><span class="piece">25.07.2009</span> <span class="piece">La Spezia</span> <span class="piece">6&deg; dan</span> <span class="piece">M&deg; Tada</span></div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12">
-            <h4>Aikido Renbukai Pesaro: insegnante ragazzi - Claudio Gabucci, 4&deg; dan Aikikai</h4>
-
-            <h4>Aikido Renbukai Rimini: insegnante bambini/ragazzi - Simona Campagna, 4&deg; dan Aikikai</h4>
-            </div>        
-        </div>
-    </div><!-- container -->
-    <div class="container marketing">
+            <div class="col-xs-12 col-sm-6 col-lg-6">
+                <div class="acenter pad"><img src="./images/rf04.jpg"/></div>
+            </div>
+        </div>      
         <div class="clearfix mobile">&nbsp;</div>
         <footer class="footer mobile">
             <div class="container acenter">
-            <p class="text-muted"><img src="./assets/footer.png" alt=""></p>
+                <p class="text-muted"><img src="./assets/footer.png" alt=""></p>
             </div>
-             </footer>
+        </footer>
     </div><!-- container -->
     <script src="./js/bootstrap.js"></script>      
 </body>
