--- a/404.htm
+++ b/404.htm
@@ -40,7 +40,7 @@
         <h2 class="text-center text-primary">Pagina non trovata<br/>&nbsp;</h2>
 
         <img src='/assets/404.png' height="300px"/>
-        <h2 class="text-center text-primary">Sito in fase di aggiornamento<br>
+        <h2 class="text-center text-primary">Pagina non trovata<br>
         <small>tra pochi secondi verrete indirizzati alla <a href='/index.php'>homepage</a></small></h2>
       </div>
 
